--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,16 @@ dependencies:
   bloc: 8.1.0
   cupertino_icons: 1.0.2
   dio: 4.0.6
+  equatable: 2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.1
+  flutter_config: 2.0.0
   get_it: 7.2.0
   hive: 2.2.3
   hive_flutter: 1.1.0
   json_annotation: 4.7.0
+  provider: 6.0.4
 
 dev_dependencies:
   build_runner: 2.3.2
@@ -29,5 +32,18 @@ dev_dependencies:
   json_serializable: 6.5.4
 
 flutter:
-
   uses-material-design: true
+  assets:
+    - assets/images/genres
+  fonts:
+    - family: Bossa
+      fonts:
+        - asset: assets/fonts/bossa/Bossa-Black.otf
+          weight: 900
+    - family: Gilroy
+      fonts:
+        - asset: assets/fonts/gilroy/Gilroy-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/gilroy/Gilroy-Bold.ttf
+          weight: 700
+
