--- a/assets/fonts/brand_icons/config.json
+++ b/assets/fonts/brand_icons/config.json
@@ -19,6 +19,48 @@
       "search": [
         "flash"
       ]
+    },
+    {
+      "uid": "42544d9f8889fc4c58470d04300c6f10",
+      "css": "pause",
+      "code": 59397,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M220 180C220 157.9 237.9 140 260 140H380C402.1 140 420 157.9 420 180V820C420 842.1 402.1 860 380 860H260C237.9 860 220 842.1 220 820V180ZM580 180C580 157.9 597.9 140 620 140H740C762.1 140 780 157.9 780 180V820C780 842.1 762.1 860 740 860H620C597.9 860 580 842.1 580 820V180Z",
+        "width": 1000
+      },
+      "search": [
+        "pause"
+      ]
+    },
+    {
+      "uid": "63da3ffb99914c5089fdac45fd39ec34",
+      "css": "close",
+      "code": 59393,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M767.7 291.8C784.1 275.4 784.1 248.7 767.7 232.3 751.3 215.9 724.6 215.9 708.2 232.3L500 440.5 291.8 232.3C275.4 215.9 248.7 215.9 232.3 232.3 215.9 248.7 215.9 275.4 232.3 291.8L440.5 500 232.3 708.2C215.9 724.6 215.9 751.3 232.3 767.7 248.7 784.1 275.4 784.1 291.8 767.7L500 559.5 708.2 767.7C724.6 784.1 751.3 784.1 767.7 767.7 784.1 751.3 784.1 724.6 767.7 708.2L559.5 500 767.7 291.8Z",
+        "width": 1000
+      },
+      "search": [
+        "close"
+      ]
+    },
+    {
+      "uid": "828cfc372015a7e2647b2b613244498a",
+      "css": "play",
+      "code": 59395,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M825.5 430.7C878.8 461.5 878.8 538.5 825.5 569.3L356.4 840.1C303 870.9 236.4 832.4 236.4 770.8L236.4 229.2C236.4 167.6 303 129.1 356.4 159.9L825.5 430.7Z",
+        "width": 1000
+      },
+      "search": [
+        "play"
+      ]
     }
   ]
 }
