--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: '>=2.18.2 <3.0.0'
 
 dependencies:
+  audio_session: ^0.1.11
   auto_animated: 3.1.0
   auto_size_text: 3.0.0
   bloc: 8.1.0
@@ -21,12 +22,12 @@ dependencies:
     sdk: flutter
   flutter_bloc: 8.1.1
   flutter_config: 2.0.0
-  just_audio: 0.9.30
   get_it: 7.2.0
   hive: 2.2.3
   hive_flutter: 1.1.0
   infinite_listview: 1.1.0
   json_annotation: 4.7.0
+  just_audio: 0.9.30
   pretty_dio_logger: 1.2.0-beta-1
   provider: 6.0.4
   shimmer: ^2.0.0
